--- a/blocks/partners/__title/partners__title.css
+++ b/blocks/partners/__title/partners__title.css
@@ -7,3 +7,13 @@
   color: #252D33;
   font-weight: 700;
 }
+@media screen and (max-width: 1080px) {
+  .partners__title {
+    font-size: 32px;
+  }
+}
+@media screen and (max-width: 700px) {
+  .partners__title {
+    font-size: 28px;
+  }
+}
